# django-study

./: render.yaml
mysite/: db.sqlite3  pyproject.toml
mysite/accounts/: urls.py  views.py
mysite/accounts/templates/accounts/: login.html
mysite/contacts/: forms.py  models.py  urls.py  views.py
mysite/contacts/migrations/: 0001_initial.py
mysite/contacts/templates/contacts/: create.html
mysite/mysite/: admin.py  settings.py  urls.py
mysite/polls/: admin.py  models.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_question_active.py  0003_alter_choice_options_alter_question_options.py
mysite/tests/contacts/: test_forms.py  test_view.py
mysite/tests/polls/: test_models.py
