[tool.poetry]
name = "projeto fullstack django"
version = "0.1.0"
description = ""
authors = ["Rodigo G Martins <mrgobetti0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[tool.poetry.group.dev.dependencies]
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
